--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
 </head>
 
 <body>
-
+  <h1>SpaceWalkers</h1>
  <!-- navigation code here -->
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Blog</a>
+    <a href="#">Contact</a>
+    <a href="#">Sign In</a>
+  </nav>
 
   <div class="container home">
 
     <header class="intro">
        <!-- image code here -->
+       <img src="img/main-header.PNG">
 
       <h2>Lift Off</h2>
     
