styling button for mobile

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header class="intro">
        <!-- image code here -->
-       <img src="img/main-header.PNG">
+       <img class="container" src="img/main-header.PNG">
 
       <h2>Lift Off</h2>
     
