--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     </section>
     
     <section class="walk">
+        <div class="walk-img-mobi">
+            <img src="img/space-walk.png" alt="Space walking astronaut">
+        </div>
+
       <div class="walk-text">
         <h3>Let's Go For A Walk</h3>
 
